# phi

./: 5-type-variables.md  KindSystem.md  README.md
1-labeled-tuples/: 1-labeled-tuples.md
10-modules/: 10-modules.md  latex2md
10-modules/latex/: .gitignore  10-modules.tex  modules.tex
10-modules/notes/: notes.xoj
11-type-constructors/: .11-type-constructors.tex  11-type-constructors.md  11-type-constructors.tex  README.md  gen  latex2md
11-type-constructors/algo/: Makefile  algo.cabal  cabal.project
11-type-constructors/algo/src/: Algo.hs  BiDirectional.hs  Common.hs  Ctx.hs  ECtx.hs  External.hs  ICtx.hs  Internal.hs  Normalize.hs
11-type-constructors/algo/test/: Lexer.x  Parser.hs  Parser.y  Tests.hs
11-type-constructors/latex/: 11-type-constructors.tex  hejohns-colors.sty  hejohns-hazel.sty  jdunfield.sty  kind-judgements.tex
12-tiles-and-bottom-up-zipper/: 12-tiles-and-bottom-up-zipper.md
13-partial-application/: 13-partial-application.md
13-partial-application/example-code/: Makefile  PartialApplication.re  dune
14-compiler/: 01-motivation.tex  02-approach.tex  03-01-middle-ir.tex  03-02-lower-ir.tex  03-03-coercion.tex  03-formalization.tex  04-implementation.tex  14-compiler.md  Makefile  empty_hole.md  hole-contexts.dot  index.tex  pipeline.dot  references.bib
14-compiler/gradual_typing/embed_interpreter_notes/: Embedded I 01bd2.md
14-compiler/gradual_typing/gradual_typing_paper_notes/: gradual_typing_ann_bib.md
14-compiler/gradual_typing/grift_notes/: Grift_paper_note.md
14-compiler/gradual_typing/space_efficient_gradual_typing_notes/: Space-Effi 74ca4.md
14-compiler/notes/embedded-interpreters/: embedded-interpreters.md
14-compiler/notes/space-efficient/: space-efficient.md
14-compiler/preamble/: math.tex  preamble.tex  symbols.tex
15-environment-based-evaluation/: 15-environment-based-evaluation.md
2-explicit-polymorphism/: 2-explicit-polymorphism.md
2-type-aliases/: 2-type-aliases.md
3-explicit-polymorphism/: 3-explicit-polymorphism.md
4-float-features/: 4-float-features.md
6-user-defined-operators/: 6-user-defined-operators.md
7-algebraic-data-types/: 7-algebraic-data-types.md
7-algebraic-data-types/formalism/: formalism.tex  old_formalism.tex
8-polymorphism-redux/: 8-polymorphism-redux.md
9-type-aliases/: 9-type-aliases-redux.md  KindSystem.md
9-type-aliases-redux/: 9-type-aliases-redux.md
9-type-aliases-redux/latex/: hejohns-colors.sty  hejohns-hazel.sty  kind-judgements.tex
9-type-aliases/latex/: .gitignore
