cabal-version:      3.0
name:               algo
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             hejohns
maintainer:         hejohns@umich.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Algo
    hs-source-dirs:   src
    build-depends:    base ^>=4.16.0.0
    default-language: GHC2021

test-suite test-algo
    type:             detailed-0.9
    test-module:      Tests
    hs-source-dirs:   test
    build-depends:    base ^>=4.16.0.0
                     ,Cabal
                     ,algo
    default-language: GHC2021

