cabal-version:      3.6
name:               algo
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             hejohns
maintainer:         hejohns@umich.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Algo
    hs-source-dirs:   src
    build-depends:    base ^>=4.16.0.0
    default-language: GHC2021

test-suite test-algo
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    hs-source-dirs:   test
    build-depends:    base ^>=4.16.0.0
                     ,HUnit
                     ,algo
    default-language: GHC2021

